--- a/src/app/pages/modal-edit-task/modal-edit-task.page.html
+++ b/src/app/pages/modal-edit-task/modal-edit-task.page.html
@@ -5,12 +5,7 @@
               <ion-icon name="arrow-back"></ion-icon>
             </ion-button>
       </ion-buttons>
-     <ion-title>New Task</ion-title>
-     <ion-buttons slot="end">
-         <ion-button color="primary" (click)="saveTask(f)" [disabled]="!f.valid">
-             <ion-icon name="checkmark"></ion-icon>
-           </ion-button>
-     </ion-buttons>
+     <ion-title>Edit Task</ion-title>
     </ion-toolbar>
 </ion-header>
 
@@ -63,6 +58,14 @@
         </ion-item>
 
       </ion-list>
+      <ion-row>
+        <ion-col size="6">
+          <ion-button expand="block" (click)="closeModal()" color="danger" class="ion-margin-top">Cancel</ion-button>
+        </ion-col>
+        <ion-col size="6">
+          <ion-button expand="block" (click)="editTask(f)" [disabled]="!f.valid" class="ion-margin-top" color="success">Save</ion-button>
+        </ion-col>
+      </ion-row>
 
     </form>
   </div>
