--- a/src/app/pages/modal-select-user/modal-select-user.page.html
+++ b/src/app/pages/modal-select-user/modal-select-user.page.html
@@ -11,12 +11,12 @@
 
 <ion-content class="ion-padding">
   <ion-list>
-    <!--ion-item *ngFor="let state of checkBoxStates">
-      <ion-label>{{state.name}}</ion-label>
+    <ion-item *ngFor="let user of checkBoxUsers">
+      <ion-label>{{user.name}}</ion-label>
       <ion-checkbox slot="start"
-      value="{{state.idState}}"
-      [(ngModel)]="state.isChecked"
-      (ionChange)="checkEvent($event)" checked="{{ state.isChecked}}"></ion-checkbox>
-    </ion-item-->
+      value="{{user.email}}"
+      [(ngModel)]="user.isChecked"
+      (ionChange)="checkEvent($event)" checked="{{ user.isChecked}}"></ion-checkbox>
+    </ion-item>
   </ion-list>
 </ion-content>
